--- a/addon/styles/tabular-list.scss
+++ b/addon/styles/tabular-list.scss
@@ -35,7 +35,7 @@
           padding: 1rem;
           line-height: 1.2rem;
         }
-        span {
+        & > span {
           display: block;
           width: 100% !important;
         }
